--- a/webroot/css/student.css
+++ b/webroot/css/student.css
@@ -1,59 +1,56 @@
-/* close button positioned on upper right corner */
-.modal {
-	background-color:#fff;
-	display:none;
-	position: relative;
-	width:700px;
-	padding:15px;
-	text-align:left;
-	border:2px solid #333;
-	opacity:0.8;
-	-moz-border-radius:6px;
-	-webkit-border-radius:6px;
-	-moz-box-shadow: 0 0 50px #ccc;
-	-webkit-box-shadow: 0 0 50px #ccc;
-}
-	
-.modal h2 {
-	background:url(/img/global/info.png) 0 50% no-repeat;
-	margin:0px;
-	padding:10px 0 10px 45px;
-	border-bottom:1px solid #333;
-	font-size:20px;
-}
-#tabs {
-	position: relative;
-	padding-left: 6.5em;
-}
-#tabs .ui-tabs-nav {
-	position: absolute;
-	left: 0.25em;
-	top: 0.20em;
-	bottom: 0.20em;
-	width: 7em;
-	padding: 0.2em 0 0.2em 0.2em;
-}
-#tabs .ui-tabs-nav li {
-	right: 1px;
-	width: 100%;
-	border-right: none;
-	border-bottom-width: 1px !important;
-	border-radius: 4px 0px 0px 4px;
-	-moz-border-radius: 4px 0px 0px 4px;
-	-webkit-border-radius: 4px 0px 0px 4px;
-	overflow: hidden;
-}
-#tabs .ui-tabs-nav li.ui-tabs-selected {
-	border-right: 1px solid transparent;
-}
-#tabs .ui-tabs-nav li a {
-	float: right;
-	width: 100%;
-	text-align: right;
-}
-#tabs > div {
-	height: 30em;
-}
+/* 
+    Document   : teacher
+    Created on : 27 Oct, 2011, 5:37:27 PM
+    Author     : Arun
+    Description:
+        Purpose of the stylesheet follows.
+*/
+
+/* 
+   TODO customize this sample style
+   Syntax recommendation http://www.w3.org/TR/REC-CSS2/
+*/
+
+ 
+            #sidebar {
+                
+                background-color:whitesmoke;
+                overflow: hidden;
+                }
+        #sidebar #main-nav li a.nav-top-item {
+                padding: 10px 15px;
+                color: #fff;
+                font-size: 14px;
+                cursor: pointer;
+                display: block;
+                text-decoration: none;
+                border-style: solid;
+                border-width:1px;
+                border-radius:3px;
+                background-color:#F37168 ;
+               /* background-color:#4C8EFB;*/
+                border-color:#DB4637;
+                }
+                #sidebar #main-nav li a.nav-top-item:hover{
+                    background-color:#DB4637;
+                }
+                
+                #sidebar #main-nav ul li a {
+                padding: 8px 15px;
+                display: block;
+                color:#4C8EFB;
+                font-size: 13px;
+                line-height: 1.2em;
+                 }
+#sidebar #main-nav li a.current {
+                
+                color:white;
+                font-weight: bold;
+                 background-color:#DB4637;
+                }
+               
 
 
-
+#sidebar #main-nav ul li a.current {
+    color: yellowgreen;}
+        
