--- a/webroot/css/student.css
+++ b/webroot/css/student.css
@@ -19,20 +19,20 @@
                 }
         #sidebar #main-nav li a.nav-top-item {
                 padding: 10px 15px;
-                color: #fff;
+                color:gray;
                 font-size: 14px;
                 cursor: pointer;
                 display: block;
                 text-decoration: none;
-                border-style: solid;
+              /*  border-style: solid;
                 border-width:1px;
                 border-radius:3px;
                 background-color:#F37168 ;
                /* background-color:#4C8EFB;*/
-                border-color:#DB4637;
+                /*border-color:#DB4637;*/
                 }
                 #sidebar #main-nav li a.nav-top-item:hover{
-                    background-color:#DB4637;
+                   /* background-color:#DB4637;*/
                 }
                 
                 #sidebar #main-nav ul li a {
