--- a/webroot/css/teacher.css
+++ b/webroot/css/teacher.css
@@ -20,19 +20,19 @@
                 }
         #sidebar #main-nav li a.nav-top-item {
                 padding: 10px 15px;
-                color: #fff;
+                color: gray;
                 font-size: 14px;
                 cursor: pointer;
                 display: block;
                 text-decoration: none;
-                border-style: solid;
+               /* border-style: solid;
                 border-width:1px;
                 border-radius:3px;
                 background-color:#C6E38D;
-                border-color:#64C100;
+                border-color:#64C100;*/
                 }
                 #sidebar #main-nav li a.nav-top-item:hover{
-                    background-color:#64C100;
+                   /* background-color:#64C100;*/
                 }
                 
                 #sidebar #main-nav ul li a {
