--- a/webroot/css/alerts.css
+++ b/webroot/css/alerts.css
@@ -1,21 +1,21 @@
-.alert-message.danger,
-.alert-message.danger:hover,
-.alert-message.error,
-.alert-message.error:hover,
-.alert-message.success,
-.alert-message.success:hover,
-.alert-message.info,
-.alert-message.info:hover {
+.message.danger,
+.message.danger:hover,
+.message.error,
+.message.error:hover,
+.message.success,
+.message.success:hover,
+.message.info,
+.message.info:hover {
   color: #ffffff;
 }
 
-.alert-message .close {
+.message .close {
   font-family: Arial, sans-serif;
   line-height: 18px;
 }
 
-.alert-message.danger,
-.alert-message.error {
+.message.danger,
+.message.error {
   background-color: #c43c35;
   background-repeat: repeat-x;
   background-image: -khtml-gradient(linear, left top, left bottom, from(#ee5f5b), to(#c43c35));
@@ -31,7 +31,7 @@
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
 }
 
-.alert-message.success {
+.message.success {
   background-color: #57a957;
   background-repeat: repeat-x;
   background-image: -khtml-gradient(linear, left top, left bottom, from(#62c462), to(#57a957));
@@ -47,7 +47,7 @@
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
 }
 
-.alert-message.info {
+.message.info {
   background-color: #339bb9;
   background-repeat: repeat-x;
   background-image: -khtml-gradient(linear, left top, left bottom, from(#5bc0de), to(#339bb9));
@@ -63,11 +63,16 @@
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
 }
 
-:root .alert-message {
+:root .message {
   border-radius: 0 \0;
+  width: 72%;
+  float: left;
+  margin-left: 19%;
+  font-size: 150%;
+  text-align: center;
 }
 
-.alert-message {
+.message {
   position: relative;
   padding: 7px 15px;
   margin-bottom: 18px;
@@ -96,78 +101,40 @@
   box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.25);
 }
 
-.alert-message .close {
+.message .close {
   margin-top: 1px;
   *margin-top: 0;
 }
-.alert-message a {
+
+.message a {
   font-weight: bold;
   color: #404040;
 }
-.alert-message.danger p a,
-.alert-message.error p a,
-.alert-message.success p a,
-.alert-message.info p a {
+
+.message.danger p a,
+.message.error p a,
+.message.success p a,
+.message.info p a {
   color: #ffffff;
 }
-.alert-message h5 {
+
+.message h5 {
   line-height: 18px;
 }
-.alert-message p {
+
+.message p {
   margin-bottom: 0;
 }
-.alert-message div {
+
+.message div {
   margin-top: 5px;
   margin-bottom: 2px;
   line-height: 28px;
 }
-.alert-message .btn {
+
+.message .btn {
   -webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.25);
   -moz-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.25);
   box-shadow: 0 1px 0 rgba(255, 255, 255, 0.25);
 }
 
-.alert-message.block-message {
-  background-image: none;
-  background-color: #fdf5d9;
-  filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
-  padding: 14px;
-  border-color: #fceec1;
-  -webkit-box-shadow: none;
-  -moz-box-shadow: none;
-  box-shadow: none;
-}
-.alert-message.block-message ul, .alert-message.block-message p {
-  margin-right: 30px;
-}
-.alert-message.block-message ul {
-  margin-bottom: 0;
-}
-.alert-message.block-message li {
-  color: #404040;
-}
-.alert-message.block-message .alert-actions {
-  margin-top: 5px;
-}
-.alert-message.block-message.error, .alert-message.block-message.success, .alert-message.block-message.info {
-  color: #404040;
-  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
-}
-.alert-message.block-message.error {
-  background-color: #fddfde;
-  border-color: #fbc7c6;
-}
-.alert-message.block-message.success {
-  background-color: #d1eed1;
-  border-color: #bfe7bf;
-}
-.alert-message.block-message.info {
-  background-color: #ddf4fb;
-  border-color: #c6edf9;
-}
-.alert-message.block-message.danger p a,
-.alert-message.block-message.error p a,
-.alert-message.block-message.success p a,
-.alert-message.block-message.info p a {
-  color: #404040;
-}
