--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -67,7 +67,7 @@ p {
                 border-bottom-style:solid;
                 border-bottom-color:#f3f3f3;
                 border-width:1px;
-                             
+                       
             }
   #pHead> h2{
                 color: gray;
@@ -336,7 +336,15 @@ a.remove-link:hover {
                  }
 
 
-
+ #nav-top-item{
+                 padding: 10px 15px;
+                color: gray !important;
+                font-size: 14px;
+                cursor: pointer;
+                display: block;
+                text-decoration:  none;
+              
+            }
 #sidebar #main-nav ul li a.current {
   /*  color: yellowgreen;*/
  background-color: #f3f3f3;
