--- a/webroot/css/student.css
+++ b/webroot/css/student.css
@@ -54,3 +54,12 @@
 #sidebar #main-nav ul li a.current {
     color: yellowgreen;}
         
+#nav-top-item{
+                 padding: 10px 15px;
+                color: gray !important;
+                font-size: 14px;
+                cursor: pointer;
+                display: block;
+                text-decoration:  none;
+              
+            }
