--- a/webroot/css/subjects.css
+++ b/webroot/css/subjects.css
@@ -15,12 +15,14 @@
                          background-color:#FAFBF7;
                 
                     }  
+                   
+                    
 #subjects #main-nav {
-                padding: 40px 0 0 0;
+                padding:0 0 0 0;
                 margin: 0 30px 0 260px;
                 font-family: Helvetica, Arial, sans-serif;
                 position:relative;
-                top:100px;
+                top:10px;
                 }
 
 #subjects #main-nav li {
