--- a/webroot/css/teacher.css
+++ b/webroot/css/teacher.css
@@ -57,4 +57,12 @@
                 
                 }
 
-        
+        #nav-top-item{
+                 padding: 10px 15px;
+                color: gray !important;
+                font-size: 14px;
+                cursor: pointer;
+                display: block;
+                text-decoration:  none;
+              
+            }
