--- a/webroot/css/button.css
+++ b/webroot/css/button.css
@@ -80,7 +80,7 @@
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
 }
 .btn {
-  cursor: pointer;
+/*  cursor: pointer;*/
 /*  display: inline-block;*/
   background-color: #e6e6e6;
   background-repeat: no-repeat;
