--- a/webroot/css/comments.css
+++ b/webroot/css/comments.css
@@ -12,8 +12,9 @@
 */
 
   .comments{
-                margin: 0 30px 0 260px;
-                padding: 40px 0 0 0;
+                margin: 0 80px 0 230px;
+                padding: 0 0 0 0;
+                
             }
             .comments li{
                 margin:0;
@@ -35,7 +36,7 @@
             .comments a:hover{color:#555;}
 
             .comments .meta li{
-                margin:0;
+                margin:-5px;
                 display:inline;
                 font-size:13px;
                 color:#777;
@@ -44,10 +45,10 @@
             }	
 
             	
-            .comments .meta .author{
+            .comments .meta .subject{
                 float:left;
                 font-weight:bold;
-                line-height:36px;
+                line-height:30px;
                 color: #1c9bf4;
 
             }
@@ -60,10 +61,12 @@
             }	
             .comments .body{
                 clear:both;
-                padding:20px 20px;
+                padding:3px 20px;
+                padding-left:40px;
                 border-bottom-style: solid;
                 border-width:1px;
                 border-bottom-color: #cccccc;
+                
             }
             .green{
                 position:relative;
