lots of changes

--- a/webroot/css/teacher.css
+++ b/webroot/css/teacher.css
@@ -15,7 +15,7 @@
             #sidebar {
                 
                 /*background-color: #F4FAE8;*/
-                background-color:#FAFBF7;
+                background-color:#F6F8F3;
                 overflow: hidden;
                 
                 }
