--- a/webroot/css/LoginBoxstyle.css
+++ b/webroot/css/LoginBoxstyle.css
@@ -13,49 +13,92 @@
 html{
     
 }
-input[type="submit"] {
-    position:relative;
-    width:50%;
-    background:#339cdf url(../img/Dropbuttonbg.png) repeat-x;
-    bottom:-1px;   
-}
-form{
+
+form.login{
     font-family:"Lucida Grande","Lucida Sans Unicode", Tahoma, sans-serif;
     font-style: bold;
-    background: #dbdfdf;
-   
-   
+    background-color:#F0F0F0;
+    border-style: solid;
+    border-width:1px; 
+    border-color:lightgray;
     text-align:justify;
     float: right;
     padding: 20px;  
-    width: 14cm;  
+    width:300px;
+    height:240px; 
     margin-top: 40px;
-}
-form.login {    
-    border-style: solid;
-    border-color: #ebe2c1;
-    top: 20%;
-    font-family: "Lucida Grande","Lucida Sans Unicode", Tahoma, sans-serif;
-    color: #4d4021;    
-    width: 260px;
-    float:right;
     
+}
+
+#login{
+    padding-top: 30px;
+    padding-right:30px;
+   
+}
+label{
+ line-height:25px;
+ 
 }
 input {
     width:92%;
     border:1px solid #899caa;
     border-radius:3px;
     -moz-border-radius:3px;
-    color:#3a454d;
-    font-weight:bold;
+     font-weight:bold;
     padding:8px 8px;
     box-shadow:inset 0px 1px 3px #bbb;
     -webkit-box-shadow:inset 0px 1px 3px #bbb;
     -moz-box-shadow:inset 0px 1px 3px #bbb;
     font-size:12px;
 }
-span {
-    text-align:center;
+input[type="submit"] {
+    position:relative;
+    width:28%;
+    padding:8px;
+   
+}
+
+input:focus{
+    border-color: rgba(82, 168, 236, 0.8);
+    border-width:1px;
+}
+.input{
+    padding-top:15px;
+}
+.submit{
+    padding-top: 10px;
+}
+#frgt-pwd {
+    text-align:left;
     display:block;
     padding:7px 0 4px 0;
+    font-size:13px;
+    
+}
+
+#header{
+    color:gray;
+    border-bottom-style:solid;
+    padding:10px;
+    height:50px;
+    border-bottom-width:1px;
+    font-weight:bold;
+    border-bottom-color:lightgray;
+    /*width:330px;*/
+    background-color:#F3F3F3;
+    
+
+}
+img{
+    height: 60px;
+}
+footer {
+   border-top-color:#EBEBEB;
+  border-top-style:solid;
+  border-top-width:1px;
+  bottom:0;
+  height:35px;
+  position:absolute;
+  width:100%;
+    background-color:#F3F3F3;
 }
