--- a/webroot/css/add_edit.css
+++ b/webroot/css/add_edit.css
@@ -110,6 +110,7 @@ footer {
     padding: 14px 15px 60px;
     border-top: 1px solid #ddd;
     margin-left:-20px;
+    bottom:0;
 }
 input[disabled],select[disabled],textarea[disabled],input[readonly],select[readonly],textarea[readonly]{background-color:#f5f5f5;border-color:#ddd;cursor: not-allowed;}
 .btn{
