--- a/webroot/css/form_a_b.css
+++ b/webroot/css/form_a_b.css
@@ -13,83 +13,70 @@
 
 html
 {
-    background-color: #cccccc;
-}
-input[type="submit"] { 
-
-}
-form{
+    /*    background-color: #B5DAF6;*/
     font-family:"Lucida Grande","Lucida Sans Unicode", Tahoma, sans-serif;
+}
+
+form{
+
     font-size: small;
     font-style: normal;
-    background-image:url(lfb1.jpg);
-
-
-}
-fieldset{
-   
-    border-style:none; 
-   
-    display: table-cell;
-}
-
-form
-{
     text-align:justify;
     float: none;
     position: relative;  
-    padding: 20px;  
-    margin: 0 auto;  
+    padding-top: 20px;  
+    margin:auto;  
     background-color: #fff;  
-
-    -webkit-box-shadow: 0 0 4px rgba(0, 0, 0, 0.2), inset 0 0 50px rgba(0, 0, 0, 0.1);  
-    -moz-box-shadow: 0 0 4px rgba(0, 0, 0, 0.2), inset 0 0 50px rgba(0, 0, 0, 0.1);  
+    margin-left:10px;
+    margin-right:10px;
 
 }
-
- div {
-                margin-bottom: 5px;
-
-            }
-
-            label {
-                display: block;
-                float: left;
-                width: 80px;
-                text-align: left;
-                font-weight: normal;
-            }
-
-            input.submit {
-                margin-left: 200px;
-            }
+label {
+    display: block;
+    float: left;
+    width: 80px;
+    text-align: left;
+    font-weight: normal;
+    padding-top:4px;
+    padding-left: 5px;
+}
 
 
 
-            li {
-                font-family: sans-serif;             
-            }
-            html
-            {
-                background-color: #B5DAF6;
-               
-            }
-            form{
-                font-family:"Lucida Sans Unicode", Tahoma, sans-serif;
-                font-size:small;
-                width:425px;
-                font-style:normal;
-                 -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);  
-                -moz-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);  
-                box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);  
 
-            }
-            fieldset{
-                border-bottom-color: chocolate;
-                border-left-style:none; 
-                border-right-style:none; 
-                border-top-style:none; 
-                border-bottom-style: solid;
-                border-bottom-width:1px;
-            }
+fieldset{
+    border-bottom-color: chocolate;
+    border-left-style:none; 
+    border-right-style:none; 
+    border-top-style:none; 
+    border-bottom-style: solid;
+    border-bottom-width:1px;
+    padding:7px;
+}
 
+#submit,#cancel{
+    float:right;
+    padding-right:20px;
+
+}
+#header{
+    color:gray;
+    border-bottom-style:solid;
+    padding:10px;
+    border-bottom-width:1px;
+    font-weight:bold;
+    border-bottom-color:lightgray;
+    /*width:330px;*/
+    background-color:#F3F3F3;
+
+
+}
+footer {
+    margin-top: 17px;
+    border-top: 1px solid #eee;
+    background-color:#F3F3F3;
+    padding: 14px 15px 60px;
+    border-top: 1px solid #ddd;
+    width:100%;
+    margin-left:-20px;
+}
