--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -24,8 +24,7 @@ h1, h2, h3, h4, h5, h6 {
                 }
 
 h1            { font-family: Calibri, Helvetica, Arial, sans-serif; font-size: 31px; font-weight: bold; color: #fff; 
-				 /* position: absolute; top: -1000px;  /* Remove this line and delete the logo (in the HTML) if you don't want an image as a logo */
-				}
+				 }
 				
                                 h2            { font-size: 26px; padding: 0 0 10px 0; }
 h3            { font-size: 17px; padding: 0 0 10px 0; }
@@ -74,26 +73,7 @@ p {
             }
  
 
-/************ Button ************/
-/*.button {
-				font-family: Verdana, Arial, sans-serif;
-                display: inline-block;
-                background: #459300  !important;
-                border: 1px solid #459300 !important;
-                padding: 4px 7px 4px 7px !important;
-                color: #fff !important;
-                font-size: 11px !important;
-                cursor: pointer;
-                
-                }
-                
-.button:hover {
-                text-decoration: underline;
-                }
-                
-.button:active {
-                padding: 5px 7px 3px 7px !important;
-                }*/
+
 				
 a.remove-link {
 				color: #bb0000;
@@ -224,9 +204,7 @@ a.remove-link:hover {
                  }*/
 
             
-#sidebar {
-                
-                width: 17%;
+#sidebar {     width: 17%;
                 height: 100%;
                 position: absolute;
                 left: 0;
@@ -269,7 +247,7 @@ a.remove-link:hover {
 
 }
 
-/************ Sidebar Accordion Menu ************/
+/************ Sidebar Menu ************/
 
 #sidebar #main-nav {
                 width:100%;
@@ -386,19 +364,19 @@ a.remove-link:hover {
                 }
 /************ Lists ************/
 
-#main-content ul,
+/*#main-content ul,
 #main-content ol {
                 padding: 10px 0;
                 }
 
-/* Unordered List */
+ Unordered List 
 
 #main-content ul li {
                 background: url('../images/icons/bullet_black.png') center left no-repeat;
                 padding: 4px 0 4px 20px;
                 }
 
-/* Ordered List */
+ Ordered List 
 
 #main-content ol {
                 padding: 0 0 0 24px;
@@ -407,7 +385,7 @@ a.remove-link:hover {
 #main-content ol li {
                 list-style: decimal;
                 padding: 4px 0;
-                }
+                }*/
 
 /*************** Content Box ***************/
 
