--- a/webroot/css/subjects.css
+++ b/webroot/css/subjects.css
@@ -15,11 +15,13 @@
                          background-color:#FAFBF7;
                 
                     }  
-                   
+                    #subjects{
+                          margin: 0 30px 0 260px;
+                    }                 
                     
 #subjects #main-nav {
                 padding:0 0 0 0;
-                margin: 0 30px 0 260px;
+/*                margin: 0 30px 0 260px;*/
                 font-family: Helvetica, Arial, sans-serif;
                 position:relative;
                 top:10px;
