--- a/webroot/css/subjects.css
+++ b/webroot/css/subjects.css
@@ -17,6 +17,7 @@
                     }  
                     #subjects{
                           margin: 0 30px 0 260px;
+                           padding: 40px 0 0 0;
                     }                 
                     
 #subjects #main-nav {
