--- a/webroot/css/alerts.css
+++ b/webroot/css/alerts.css
@@ -65,18 +65,19 @@
 
 :root .message {
   border-radius: 0 \0;
-  width: 30%;
+/*  width: 30%;*/
   float: left;
-  margin-left:37%;
-  font-size: 150%;
+  margin-top: 10px;
+  margin-left:45%;
+  font-size: 120%;
   text-align: center;
-  
+  padding:8px;
 }
 
 .message {
   position: relative;
   padding: 7px 5px;
-  margin-bottom: 18px;
+/*  margin-bottom: 18px;*/
   color: #404040;
   background-color: #eedc94;
   background-repeat: repeat-x;
