--- a/webroot/css/comments.css
+++ b/webroot/css/comments.css
@@ -10,10 +10,12 @@
    TODO customize this sample style
    Syntax recommendation http://www.w3.org/TR/REC-CSS2/
 */
-
+#comments{
+    padding-top: 40px;
+}
   .comments{
-                margin: 0 80px 0 230px;
-                padding: 0 0 0 0;
+                margin: 0 30px 0 260px;
+              
                 
             }
             .comments li{
@@ -76,11 +78,4 @@
                 /*bottom:10px;*/
             }
             
-            #comments{
-
-                margin: 0 30px 0 300px;
-                width:70%;
-
-            }
-
 
