--- a/webroot/css/add_edit.css
+++ b/webroot/css/add_edit.css
@@ -142,7 +142,7 @@ input[disabled],select[disabled],textarea[disabled],input[readonly],select[reado
 
 }
 /* some css for all validation messages */
-.LV_validation_message{
+.LV_validation_message,.error-message{
 padding-left: 10px;
 color:#DD4B39;
 }
